src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');



* {
  color: #fff;
  font-family: 'Open Sans', sans-serif;
}

body {
  margin: 0;
  padding: 0;
}

.app {
  background-color: #343541;
  display: flex;
}

.side-bar {
  background-color: #202123;
  height: 100vh;
  width: 244px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

button {
  border: solid 0.5px rgba(255, 255, 255, 0.5);
  background-color: transparent;
  border-radius: 5px;
  padding: 10px;
  margin: 10px;
  color: #fff;
  font-weight: 500;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

nav {
  border-top: solid 0.5px rgba(255, 255, 255, 0.5);
  padding: 10px;
  margin: 10px;
}

.history {
  padding: 10px;
  margin: 10px;
  height: 100%;
}

.history li {
  list-style-type: none;
  padding: 15px 0;
  cursor: pointer;
  font-size: 14px;
}

.main {
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.info {
  color: rgba(255, 255, 255, 0.5);
  font-size: 11px;
  padding: 10px;
}

.input-container {
  position: relative;
  width: 100%;
  max-width: 650px;
}

input {
  width: 100%;
  font-size: 20px;
  border: none;
  background-color: rgba(255, 255, 255, 0.05);
  padding: 12px 15px;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

input:focus {
  outline: none;
}

.bottom-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#submit {
  position: absolute;
  bottom: 8px; /* Adjust the value as per your preference */
  right: 0;
  cursor: pointer;
  background-color: #4CAF50;
  color: #fff;
  border: none;
  padding: 8px 16px;
  border-radius: 4px;
  font-size: 16px;
  font-weight: 600;
  transition: background-color 0.3s ease;
  transform: translateX(50%);
}

#submit:hover {
  background-color: #45a049;
}

.feed {
  overflow-y: auto;
  width: 100%;
  padding: 0;
}

.feed::-webkit-scrollbar {
  width: 8px;
}

.feed::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0.2);
}

.feed::-webkit-scrollbar-thumb {
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 4px;
}

.feed li {
  display: flex;
  background-color: #444654;
  width: 100%;
  padding: 20px;
  margin: 20px 0;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.feed p {
  color: rgba(255, 255, 255, 0.8);
  font-size: 14px;
  text-align: left;
}

.feed p.role {
  min-width: 100px;
}

